<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Naturalisation Française</string>
    <string name="menu_questions">Questions</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_plus">Plus</string>

    <string name="category_prompt">Choisissez la catégorie de la question</string>

    <string-array name="categories_array">
        <item>Personnel</item>
        <item>République</item>
        <item>Histoire</item>
        <item>Culture Générale</item>
    </string-array>
    <string name="menu_language">Version Anglaise</string>
    <string name="naturalisation_francaise_pro">Naturalisation Française Pro</string>
    <string name="termes_et_conditions">Termes &amp; Conditions</string>
    <string name="action_bar_title_lite">Naturalisation Française Lite</string>
    <string name="action_bar_title_pro">Naturalisation Française Pro</string>
    <string name="toast_get_pro_version">Passez à la version Pro pour pouvoir rajouter vos questions !</string>
    <string name="question">Question</string>
    <string name="response">Réponse</string>
    <string name="submit">Soumettre</string>
    <string name="cancel">Annuler</string>
    <string name="add_a_question">Rajouter une question</string>
    <string name="rate_app">Partager votre avis !</string>
    <string name="turn_pro">Devenez Pro !</string>
    <string name="exit">Quitter</string>
    <string name="your_question">Votre Question</string>

    <!-- Rating dialog -->
    <string name="rating_title">Souhaitez-vous noter Naturalisation Française?</string>
    <string name="rating_later">Plus tard :)</string>
    <string name="rating_feedback">Vos retours</string>
    <string name="rating_hint">Nous serions reconnaissants de nous dire où nous pouvons améliorer</string>
    <string name="rating_no">Non, merci :)</string>

    <!-- Categories -->
    <string name="republic">République</string>
    <string name="history">Histoire</string>
    <string name="personal">Personnel</string>
    <string name="general">Général</string>
    <string name="faqs">FAQs</string>
    <string name="menu_jo">JO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="family_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="middle_name">Surnom (Optionnel)</string>
    <string name="result">Result</string>
    <string name="foundText">Vous apparaissez dans le JO du </string>
    <string name="notfoundText">malheureusement vous n\'êtes toujours pas naturalisé ...\n Le jour J va bientôt arriver !</string>
    <string name="congratulations">Félicitations</string>
    <string name="notyet">Patience …</string>
    <string name="toast_get_pro_version_jo">Passez à la version Pro pour pouvoir vérifier votre JO !</string>


    <!--    01-09-2020-->
    <string name="title_sign_up" translatable="false">Sign in to start learning</string>
    <string name="title_register_facebook">Login via Facebook</string>
    <string name="title_register_google">Login via Google</string>
    <string name="facebook_app_id" translatable="false">2540574699568513</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2540574699568513</string>

</resources>
