<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.theapp.naturalisation.fragments.JoFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/family_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/card_bottom_margin"
        android:layout_marginEnd="12dp"
        android:hint="@string/family_name"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#3949AB"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/HintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/family_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/card_bottom_margin"
        android:layout_marginEnd="12dp"
        android:hint="@string/first_name"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#3949AB"
        app:hintTextAppearance="@style/HintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/middle_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/card_bottom_margin"
        android:layout_marginEnd="12dp"
        android:hint="@string/middle_name"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#3949AB"
        app:hintTextAppearance="@style/HintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/middle_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_search_jo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:theme="@style/PrimaryButton" />
</LinearLayout>
