<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plusLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.PlusFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/add_a_question"
        android:textColor="@color/colorAccent"
        app:icon="@drawable/ic_add_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/rate_app"
        android:textColor="@color/colorAccent"
        app:icon="@drawable/ic_star_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_question" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/facebook_page"
        android:textColor="@color/colorAccent"
        app:icon="@drawable/ic_facebook_app_symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rating" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/exit"
        android:textColor="@color/colorAccent"
        app:icon="@drawable/ic_exit_to_app_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>