<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addQuestionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dialog_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/category_prompt"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/category_spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="30dp"
            android:entries="@array/categories_array"
            android:popupBackground="@color/colorAccent"
            android:prompt="@string/category_prompt"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@+id/dialog_question_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            app:hintTextAppearance="@style/FullScreenDialogStyle"
            app:layout_constraintBottom_toTopOf="@+id/dialog_response_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_question_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/question"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_response_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="40dp"
            app:hintTextAppearance="@style/FullScreenDialogStyle"
            app:layout_constraintBottom_toTopOf="@+id/button_post_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_response_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/response"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_post_question"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/submit"
            android:textColor="@color/colorAccent"
            android:theme="@style/PrimaryButton"
            app:layout_constraintBottom_toTopOf="@+id/adView_add_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView_add_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:layout_marginBottom="30dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-8438644666105561/5035254667"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>